--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
   <meta charset="UTF-8">
   <title>SoleStreet | Shoe Brand</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+   <meta name="description" content="SoleStreet is a demo shoe brand website created by Mouli Khanchandani using HTML and GitHub Pages.">
+  <meta name="keywords" content="Mouli Khanchandani, SoleStreet, shoe brand website, GitHub Pages project">
+  <meta name="author" content="Mouli Khanchandani">
 
   <style>
     body {
@@ -112,6 +115,14 @@
 <footer>
   <p>© 2026 SoleStreet. All rights reserved.</p>
 </footer>
+<section style="padding:40px; text-align:center;">
+  <h2>About Me</h2>
+  <p>
+    Hi, I’m <strong>Mouli Khanchandani</strong>, a BBA student and social media intern.
+    This website is a demo shoe brand project built using HTML and GitHub Pages
+    as part of my learning journey in digital marketing and web development.
+  </p>
+</section>
 
 </body>
 </html>
